manifests/service-6381.yml
apiVersion: v1
kind: Service
metadata:
    name: "bugbash2392020-8756"
    labels:
        app: "bugbash2392020-8756"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "bugbash2392020-8756"
